--- a/MEIv3/app/src/main/res/menu/activity_sesion_drawer.xml
+++ b/MEIv3/app/src/main/res/menu/activity_sesion_drawer.xml
@@ -26,6 +26,10 @@
         android:id="@+id/config"
         android:checkableBehavior="none">
         <item
+            android:id="@+id/nav_contacto"
+            android:icon="@drawable/ic_contact"
+            android:title="Contacto" />
+        <item
             android:id="@+id/nav_cerrarc"
             android:icon="@android:drawable/ic_menu_close_clear_cancel"
             android:title="Cerrar sesión" />
