--- a/MEIv3/app/src/main/res/layout/fragment_regis.xml
+++ b/MEIv3/app/src/main/res/layout/fragment_regis.xml
@@ -180,20 +180,23 @@
                 android:textColor="@color/common_google_signin_btn_text_dark_focused"
                 android:textColorHint="?attr/colorControlNormal" />
 
-            <Button
-                android:id="@+id/btn_registro"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_below="@+id/et_r_lugar"
-                android:layout_marginBottom="30dp"
-                android:layout_marginTop="20dp"
-                android:backgroundTint="@color/colorPrimary"
-                android:padding="20dp"
-                android:text="Registrarse"
-                android:textColor="@android:color/background_light"
-                android:visibility="visible" />
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/btn_registro"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@color/colorPrimary"
+                    android:padding="20dp"
+                    android:text="Registrarse"
+                    android:textColor="@android:color/background_light"
+                    android:visibility="visible" />
+            </RelativeLayout>
 
         </LinearLayout>
     </ScrollView>
