--- a/MEIv3/app/src/main/res/layout/nav_header_sesion.xml
+++ b/MEIv3/app/src/main/res/layout/nav_header_sesion.xml
@@ -11,10 +11,10 @@
 
     <ImageView
         android:id="@+id/profile_bg"
-        android:scaleType="centerCrop"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:srcCompat="@color/colorPrimary" />
+        android:scaleType="centerCrop"
+        app:srcCompat="@color/red" />
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
