--- a/MEIv3/app/src/main/res/values/colors.xml
+++ b/MEIv3/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#ee0000</color>
     <color name="colorPrimaryDark">#a70003</color>
     <color name="colorAccent">#ff0000</color>
-    <color name="background">#ececec</color>
+    <color name="background">#FFF</color>
     <color name="red">#F6402C</color>
     <color name="pink">#EB1460</color>
     <color name="purple">#9C1AB1</color>
